@@ -1,5 +1,8 @@
 2010-02-21 S. Thiell <stephane.thiell@cea.fr>
 
+    * Task.py: Fix a deadlock when a task is resumed two times from another
+	thread (raise AlreadyRunningError instead). Added test.
+
 	* Worker/Worker.py: Improve usage error handling for some methods (trac
 	ticket #28), raising WorkerError when needed. Add library misusage tests.
 
